# ROS2_reader

./: README.md  ROS2_CODE_LICENSE
LaTeX_files/: Practicum.tex  ROS-action.tex  ROS-launch-files.tex  ROS-nodes.tex  ROS-overige.tex  ROS-packages.tex  ROS-services.tex  bibliography.bib  introductie.tex  main.tex
LaTeX_files/Layout_files/: C++.sty  xml.sty
LaTeX_files/Pictures/: README.md
ROS2_workspace_with_examples/: README.md
ROS2_workspace_with_examples/src/actsrv_action_from_custom_interfaces/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/actsrv_action_from_custom_interfaces/include/actsrv_action_from_custom_interfaces/: FibActionClient.hpp  FibActionServer.hpp
ROS2_workspace_with_examples/src/actsrv_action_from_custom_interfaces/src/: FibActionClient.cpp  FibActionServer.cpp  mainFibActionClient.cpp  mainFibActionServer.cpp
ROS2_workspace_with_examples/src/custom_interfaces/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/custom_interfaces/action/: Fibonacci.action
ROS2_workspace_with_examples/src/custom_interfaces/msg/: AddressBook.msg
ROS2_workspace_with_examples/src/custom_interfaces/srv/: AddThreeInts.srv
ROS2_workspace_with_examples/src/hello/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/hello/include/hello/: HelloNode.h
ROS2_workspace_with_examples/src/hello/src/: HelloNode.cpp  mainGreeter.cpp
ROS2_workspace_with_examples/src/hello_noheaders/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/hello_noheaders/src/: HelloNode.cpp
ROS2_workspace_with_examples/src/pub_without_spinning/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/pub_without_spinning/include/pub_without_spinning/: SubscriberNode.h
ROS2_workspace_with_examples/src/pub_without_spinning/src/: SubscriberNode.cpp  mainPublisher.cpp
ROS2_workspace_with_examples/src/pubsub/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/pubsub/include/pubsub/: PublisherNode.h  SubscriberNode.h
ROS2_workspace_with_examples/src/pubsub/src/: PublisherNode.cpp  SubscriberNode.cpp
ROS2_workspace_with_examples/src/pubsub_custom_msg_in_pkg/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/pubsub_custom_msg_in_pkg/include/pubsub_custom_msg_in_pkg/: PublisherNode.h  SubscriberNode.h
ROS2_workspace_with_examples/src/pubsub_custom_msg_in_pkg/src/: PublisherNode.cpp  SubscriberNode.cpp
ROS2_workspace_with_examples/src/pubsub_msg_from_custom_interfaces/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/pubsub_msg_from_custom_interfaces/include/pubsub_msg_from_custom_interfaces/: PublisherNode.h  SubscriberNode.h
ROS2_workspace_with_examples/src/pubsub_msg_from_custom_interfaces/src/: PublisherNode.cpp  SubscriberNode.cpp  mainPublisher.cpp  mainSubscriber.cpp
ROS2_workspace_with_examples/src/rviz_example/: CMakeLists.txt  package.xml  readme.md
ROS2_workspace_with_examples/src/rviz_example/launch/: demo.launch.py
ROS2_workspace_with_examples/src/rviz_example/src/: state_publisher.cpp
ROS2_workspace_with_examples/src/srvcli_custom_srv_in_pkg/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/srvcli_custom_srv_in_pkg/include/srvcli_custom_srv_in_pkg/: ClientNode.h  ServiceNode.h
ROS2_workspace_with_examples/src/srvcli_custom_srv_in_pkg/src/: ClientNode.cpp  ServiceNode.cpp  mainService.cpp
ROS2_workspace_with_examples/src/srvcli_libellebil/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/srvcli_libellebil/include/srvcli_libellebil/: ClientNode.h  ServiceNode.h
ROS2_workspace_with_examples/src/srvcli_libellebil/src/: ClientNode.cpp  ServiceNode.cpp  mainClient.cpp
ROS2_workspace_with_examples/src/srvcli_libellebil/srv/: Word.srv
ROS2_workspace_with_examples/src/srvcli_srv_from_custom_interfaces/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/srvcli_srv_from_custom_interfaces/include/srvcli_srv_from_custom_interfaces/: ClientNode.h  ServiceNode.h
ROS2_workspace_with_examples/src/srvcli_srv_from_custom_interfaces/src/: ClientNode.cpp  ServiceNode.cpp
ROS2_workspace_with_examples/src/tf2_example/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/tf2_example/src/: frameBroadcaster.cpp  frameListener.cpp
ROS2_workspace_with_examples/src/weird_pubsub/: CMakeLists.txt  package.xml
ROS2_workspace_with_examples/src/weird_pubsub/include/weird_pubsub/: WeirdNode.h
ROS2_workspace_with_examples/src/weird_pubsub/src/: WeirdNode.cpp  mainWeirdNode.cpp
reader/: FAQ.tex  HelloNodePackage.tex  ROS-action.tex  ROS-packages.tex  ROS-pub-sub.tex  introductie.tex  main.tex
reader/Layout_files/: Dos.sty  python.sty  structure.tex
