<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>srvcli_srv_from_custom_interfaces</name>
  <version>0.0.0</version>
  <description>Example of a server and client with a srv-message-type from the custom_interfaces package.</description>
  <maintainer email="jorn.bunk@han.nl">Jorn Bunk</maintainer>
  <license>Creative CommonsAttribution-NonCommercial-ShareAlike-4.0 International</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- place your dependencies here:-->
  <depend>rclcpp</depend>
  <depend>custom_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
